fix(index): align index cards to middle inside section for huge displays

--- a/Arteg/wwwroot/assets/mobirise/css/mbr-additional.css
+++ b/Arteg/wwwroot/assets/mobirise/css/mbr-additional.css
@@ -2527,8 +2527,6 @@ body {
   background-image: url("../../../assets/images/mbr-1803x1080.jpg");
 }
 .cid-qLKHiahYO2 {
-  padding-top: 30px;
-  padding-bottom: 15px;
   background-color: #ffffff;
 }
 .cid-qLKHiahYO2 .media-container-row {
@@ -2559,8 +2557,6 @@ body {
   color: #cc2952;
 }
 .cid-qLKHjtLGQ7 {
-  padding-top: 15px;
-  padding-bottom: 15px;
   background-color: #cc2952;
 }
 @media (min-width: 992px) {
@@ -2616,7 +2612,12 @@ body {
 
 /* INDEX PAGE VH */
 @media (min-width: 767px) {
-    .header3 {
+    .indexCard {
         min-height: 50vh;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-align: center;
+        align-items: center;
     }
 }
